@@ -13,6 +13,19 @@ A personal desktop **task manager** built using **JavaFX**, allowing users to ad
 
 ---
 
+## 🖥️ How to Run
+1. Make sure you have **Java 17+** and **JavaFX SDK 21.0.7** installed.
+2. Clone the repo:
+   ```bash
+   git clone https://github.com/kdadban1/TaskManagerGUI.git
+   cd TaskManagerGUI
+3. Compile and Run:
+   ```bash
+   javac --module-path lib/javafx-sdk-21.0.7/lib --add-modules javafx.controls,javafx.fxml src/*.java
+   java --module-path lib/javafx-sdk-21.0.7/lib --add-modules javafx.controls,javafx.fxml -cp src TaskManagerApp
+   
+---
+
 ## 🛠️ Built With
 
 - Java 21
